added logout and resolved naming problems
